[package]
name = "ascii"
version = "1.0.0"
authors = ["Igor Couto <igor.fcouto@gmail.com>"]
edition = "2021"
description = "A program that prints ASCII table"
repository = "https://github.com/igor-couto/rust-ascii"

[dependencies]
colored = "2.0"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]